# Pathway

./: .gitignore  .gitmodules  Dockerfile  README.md  __init__.py  chunked_docs_combined.csv  compose.yaml  custom-graph-framework.ipynb  lsa.py  main.py  pyproject.toml  rag-agent-langgraph.ipynb
.cache/41/: cache.db
Ashwath Basic RAG/: Financial-QA-10k.csv  README.md  data.csv  eh.ipynb  eval.py  eval_chain.py  evaluation_results.csv  final.csv  frontend.py  langchain_frontend.py  memory_buffer.py  punkts.py  server_runner.py  testing.py  vector_store.py
Docker/pipeline/: Dockerfile
Docker/server/: Dockerfile
coding/: tmp_code_89b58e7026f958ad645c00b2921a3d15.py  tmp_code_dbed581094a4040c211eca5773bb3a0e.py
document_cache/: cache.db  cache.db-shm  cache.db-wal
evaluation/: evaluation_from_datase.py
experiments/: 01_change_sys_prompt.ipynb
experiments/.cache/41/: cache.db
experiments/coding/: tmp_code_63660157357da9810b9047f6c7a3a338.py  tmp_code_cf48d083d1c4b0bc5d7e645825adc5ba.py
experiments/csv_files/: 02_csvs.ipynb  metadata_A.yaml
experiments/cuad_eda/: 02_cuad.ipynb  03_cuad_eda.ipynb
experiments/prompts/: 01_prompts_exp.ipynb
prototype_rag/: README.md
rag/: __init__.py  chunked_docs_combined.json  chunked_docs_combined_default.json  chunked_docs_combined_sliding_window.json  chunked_docs_combined_small2big.json  custom_llm_chat.py  index.py  retriever.py  server.py  splitter.py  vector_store.py
rag/data/: input.txt
src/: .env  analyse_legal.py  ash_frontend_updated.py  cleaned_eval_pipeline.py  eval_pipeline.py  experimental_frontend.py  frontend.py  google_search.py  guardrail.py  lsa.py  pipeline.py  prompts.py  server.py  server_runner.py  test_.py  utils.py  wait-for.sh
src/.cache/41/: cache.db
src/Cache/: 1733335098295-0-0
src/coding/: tmp_code_09d972ce42d5b55a0770f9b961b8e935.py  tmp_code_326aeabb41a8f15611cd3806d60ca7aa.py  tmp_code_5ba77d89b53686f651cdb6fbc0feb3ac.py  tmp_code_6647f5b9eb1977b2b6fda676ad50e9e1.py  tmp_code_99c14d04ee455960e89721b6f50fe3dd.py  tmp_code_a96d88a9ff7cdd196233e86b7cbb33dd.py  tmp_code_e0133cf93ff47639b1ec626b62130729.py  tmp_code_e73a474c253036afc80cd4092cf18810.py
src/document_cache/: cache.db  cache.db-shm  cache.db-wal
