[tool.poetry]
name = "rag"
version = "0.1.0"
description = "rag pipeline"
authors = ["Aditya Garg"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
torch = "2.0.1"
sentence-transformers = "^3.2.1"
pillow-heif = "^0.20.0"
numpy = "<2.0"
matplotlib = "^3.9.2"
unstructured-inference = "^0.8.1"
python-magic-bin = "^0.4.14"

[tool.poetry.group.evaluations]
optional = true

[tool.poetry.group.evaluations.dependencies]
pytest = "^6.0.0"

[tool.poetry.group.pathway]
optional = false

[tool.poetry.group.pathway.dependencies]
pathway = {extras = ["xpack-llm-docs"], version = "^0.15.2"}

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
pathway = {path = "./PathwayPS", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
