[tool.poetry]
name = "rag"
version = "0.1.0"
description = "rag pipeline"
authors = ["Aditya Garg"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
torch = "2.0.1"
sentence-transformers = "^3.2.1"
pillow-heif = "^0.20.0"
numpy = "<2.0"
matplotlib = "^3.9.2"
unstructured-inference = "^0.8.1"
pdfplumber = "^0.11.4"
nltk = "^3.9.1"
streamlit = "^1.40.1"
autogen = "^0.4"
einops = "^0.8.0"
sumy = "^0.11.0"
llama-index-embeddings-google = "^0.3.0"
llama-index-core = "^0.12.2"
llama-index-llms-gemini = "^0.4.0"
llama-index-retrievers-pathway = "^0.3.0"
vertexai = "^1.71.1"

[tool.poetry.group.pathway]
optional = true

[tool.poetry.group.pathway.dependencies]
pathway = {extras = ["xpack-llm-docs"], version = "*"}

[tool.poetry.group.evaluations]
optional = true

[tool.poetry.group.evaluations.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
